redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis
          image: redis:7

          ports:
            - containerPort: 6379

          command:
            - redis-server
            - --requirepass
            - $(REDIS_PASSWORD)
            - --appendonly
            - "yes"

          volumeMounts:
            - name: redis-data
              mountPath: /data

      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service

spec:
  type: ClusterIP

  selector:
    app: redis

  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
