service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service

spec:
  type: ClusterIP

  selector:
    app: url-shortener

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
