ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: localhost

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: url-shortener-service
                port:
                  number: 80
